--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,11 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+// @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
 @import 'variables';
+@import 'comone/header';
+@import 'comone/footer';
+@import 'pages/home';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
